--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#1976d2" />
     <meta http-equiv="Cross-Origin-Opener-Policy" content="unsafe-none" />
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="unsafe-none" />
+    <meta http-equiv="Cross-Origin-Resource-Policy" content="cross-origin" />
     <meta
       name="description"
       content="TinyTots - Professional Daycare Management System. Streamline your daycare operations with our comprehensive solution for child care centers."
