--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Cross-Origin-Opener-Policy" content="unsafe-none" />
     <meta http-equiv="Cross-Origin-Embedder-Policy" content="unsafe-none" />
     <meta http-equiv="Cross-Origin-Resource-Policy" content="cross-origin" />
+    <meta http-equiv="Permissions-Policy" content="cross-origin-isolated=()" />
     <meta
       name="description"
       content="TinyTots - Professional Daycare Management System. Streamline your daycare operations with our comprehensive solution for child care centers."
